<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smessage</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name ="action_secure_conversation">Secure Conversation</string>
    <string name="action_new">New</string>
    <string name="button_send">Send message</string>
    <string name="edit_message">Enter a message</string>
    <string name="enter_number">Enter a phone number</string>
    <string name="new_message">New Message</string>
    <string name="contact_icon_desc">Contact image</string>
    <string name="secure_conversation_desc">Start a new secure conversation</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="start_secure_conversation">Are you sure you want to start a new secure conversation?</string>
    <string name="password_screen_background">Password Screen Background</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_password">Please enter a new password:</string>
    <string name="enter_phone_number">Enter a phone number</string>
    <string name="header_background">Header background</string>

</resources>
