<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:smessage="http://schemas.android.com/apk/res-auto" >
      
    <!--  New Message, should appear as action button -->
    <item android:id="@+id/action_new_message"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          smessage:showAsAction="always" />    
    
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search" 
          smessage:showAsAction="ifRoom" />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          smessage:showAsAction="never" />
    
</menu>
