<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#3e97d1">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/imageView"
        android:background="@drawable/password_background"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/password_screen_background"/>

    <TextView
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:layout_marginTop="60dp"
        android:typeface="normal"
        android:textSize="20sp"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/enter_password"
        android:layout_alignStart="@+id/enter_password"
        android:layout_alignRight="@+id/enter_password"
        android:layout_alignEnd="@+id/enter_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/reset_password"
        android:onClick="resetPassword"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/logo"
        android:background="@drawable/app_logo"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/enter_password"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
